--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,15 +1,15 @@
-#form,
-p {
+.search-movie,
+.message {
   display: block;
   margin: auto;
   margin-left: 40%;
   margin-top: 5%;
 }
-input {
+.input-search {
   width: 20%;
   height: 2em;
   margin-right: 1%;
 }
-button {
+.btn-search {
   height: 2em;
 }
