--- a/src/components/MovieItem/MovieItem.css
+++ b/src/components/MovieItem/MovieItem.css
@@ -1,14 +1,21 @@
 .container-movieItem {
-  width: 20%;
-  margin-left: 2%;
+  width: 15%;
+  margin-left: 4%;
+  margin-top: 5%;
   display: inline-block;
 }
 
 .container-movieItem img {
   width: 100%;
+  height: 25em;
 }
 
-.container-movieItem .title-movie,
+.container-movieItem .title-movie {
+  text-align: center;
+  font-size: 1.5em;
+}
+
 .container-movieItem .year {
   text-align: center;
+  font-size: 100%;
 }
