--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+.message-error {
+  text-align: center;
+  font-size: 1em;
+}
