orden de las dependencias

--- a/src/components/MovieItem/MovieItem.css
+++ b/src/components/MovieItem/MovieItem.css
@@ -13,7 +13,7 @@
 .container-movieItem .title-movie {
   text-align: center;
   font-size: 1.5em;
-  color: black 
+  color: black;
 }
 
 .container-movieItem .year {
