--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -7,11 +7,12 @@
 }
 
 .search-movie .input-search {
-  width: 30%;
+  width: 20%;
   height: 2em;
   margin-right: 1%;
 }
 
 .search-movie .btn-search {
-  height: 2em;
+  width: 6em;
+  height: 2.5em;
 }
