--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -2,17 +2,19 @@
 .message {
   display: block;
   margin: auto;
-  margin-left: 40%;
+  margin-left: 35%;
   margin-top: 5%;
 }
 
 .search-movie .input-search {
-  width: 20%;
+  width: 40%;
   height: 2em;
   margin-right: 1%;
+  border-radius: 1em;
 }
 
 .search-movie .btn-search {
   width: 6em;
+  border-radius: 1em;
   height: 2.5em;
 }
