--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,12 +3,21 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 body {
-  background-color: rgb(255, 249, 225);
+  background-color: rgb(218, 236, 235);
 }
+.content-movie {
+  margin-top: 10em;
+  background-color: aliceblue;
+}
+
 .message-error {
+  display: block;
+  margin: auto;
+  padding: 3em;
   text-align: center;
-  padding-right: 9em;
-  font-size: 0.9em;
+  background: rgba(0, 0, 0, 0.664);
+  font-size: 1em;
+  color: white;
 }
 
 .image-error {
