--- a/src/components/DataMovie/DataMovie.css
+++ b/src/components/DataMovie/DataMovie.css
@@ -24,6 +24,16 @@
   margin-bottom: 1em;
 }
 
+.message-error {
+  display: block;
+  margin: auto;
+  padding: 3em;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.664);
+  font-size: 1em;
+  color: white;
+}
+
 .image-movie {
   width: 20%;
   height: auto;
@@ -49,7 +59,8 @@
   text-align: center;
   margin: 1em;
   line-height: 2em;
-  font-size: 1.5em;border: white;
+  font-size: 1.5em;
+  border: white;
   border-radius: 12em;
 }
 
