correcciones de loading ...

--- a/src/components/DataMovie/DataMovie.css
+++ b/src/components/DataMovie/DataMovie.css
@@ -11,6 +11,12 @@
   margin-bottom: 5em;
 }
 
+.message-loading {
+  width: 100%;
+  margin-top: 10em;
+  margin-left: 40%;
+}
+
 .info-movie .title-movie {
   text-align: center;
   font-size: 5em;
