--- a/src/components/MovieItem/MovieItem.css
+++ b/src/components/MovieItem/MovieItem.css
@@ -1,21 +1,38 @@
 .container-movieItem {
-  width: 15%;
-  margin-left: 4%;
-  margin-top: 5%;
+  width: 18em;
+  margin-left: 2em;
+  margin-top: 3em;
+  margin-right: 0.5em;
+  padding: 1em;
   display: inline-block;
+  transition: all;
+  transition-duration: 1s;
 }
 
 .container-movieItem img {
   width: 100%;
   height: 25em;
+  margin-top: 1em;
+  transition: all;
+  transition-duration: 1s;
+}
+
+img:hover {
+  margin-left: -1em;
+  opacity: 0.7;
+  width: 20em;
+  height: 26em;
 }
 
 .container-movieItem .title-movie {
   text-align: center;
   font-size: 1.5em;
+  padding-top: 1em;
+  color: black;
 }
 
 .container-movieItem .year {
   text-align: center;
+  color: black;
   font-size: 1em;
 }
