--- a/src/components/MovieItem/MovieItem.css
+++ b/src/components/MovieItem/MovieItem.css
@@ -7,27 +7,28 @@
   display: inline-block;
   transition: all;
   transition-duration: 1s;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: all;
+  transition-duration: 1s;
 }
 
 .container-movieItem img {
   width: 100%;
   height: 25em;
   margin-top: 1em;
-  transition: all;
-  transition-duration: 1s;
 }
 
-img:hover {
-  margin-left: -1em;
+.container-movieItem:hover {
   opacity: 0.7;
-  width: 20em;
-  height: 26em;
+  width: 19em;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container-movieItem .title-movie {
   text-align: center;
   font-size: 1.5em;
-  padding-top: 1em;
+  height: 2em;
+  padding-bottom: 10%;
   color: black;
 }
 
